# vim-mapper

./: .gitignore  Cargo.toml  README.md  TODO.md  VimMapper.vmd  build.rs  vim-mapper.vmd
assets/: icon.xcf
assets/web/: logo.xcf
force-graph-rs/: Cargo.toml
force-graph-rs/src/: lib.rs
src/: constants.rs  main.rs  vimmapper.rs  vmbutton.rs  vmconfig.rs  vmdialog.rs  vmgraphclip.rs  vminput.rs  vmnode.rs  vmsave.rs  vmtabbar.rs  vmtextinput.rs
vm-force-graph-rs/: Cargo.toml  README.md
vm-force-graph-rs/src/: lib.rs
