[package]
name = "vim-mapper"
version = "1.0.0-rc1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
indexmap =  { version = "1.0.2", features = ["std"]}
unicode-segmentation = "^1.10"
petgraph = { version = "0.6.2", features = ["serde-1"] }
vm_force_graph_rs = { path = "vm-force-graph-rs", version = "0.4.1" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.2", features = ["fmt", "ansi"], default-features = false }
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
regex = "1.6.0"
dirs = "4.0.0"
dark-light = "0.2.3"
common_macros = "0.1.1"
bitflags = { version = "2.0.2", features = ["serde"]}
