[package]
name = "vm_force_graph"
version = "0.4.0"
description = "Force-directed graph algorithm customized for the Vim-Mapper program"
authors = ["Douglas Powers <dougpowers@gmail.com>"]
repository = "https://github.com/dougpowers/Vim-Mapper/vm-force-graph-rs"
license = "MIT"
edition = "2018"

[dependencies]
petgraph = { version = "0.6.2", features = ["serde-1"] }