[package]
name = "vm_force_graph_rs"
version = "0.4.1"
description = "Force-directed graph algorithm customized for the Vim-Mapper program"
authors = ["Douglas Powers <dougpowers@gmail.com>"]
repository = "https://github.com/dougpowers/Vim-Mapper/vm-force-graph-rs"
license = "MIT"
edition = "2018"

[dependencies]
serde = "1.0"
rayon = "^1.6"
petgraph = { version = "0.6.2", features = ["serde-1"] }